@@ -69,6 +69,7 @@ type t =
   | No_cmi_file of string                   (* 49 *)
   | Bad_docstring of bool                   (* 50 *)
   | Expect_tailcall                         (* 51 *)
+  | Fragile_literal_pattern                 (* 52 *)
 ;;
 
 (* If you remove a warning, leave a hole in the numbering.  NEVER change
@@ -129,9 +130,10 @@ let number = function
   | No_cmi_file _ -> 49
   | Bad_docstring _ -> 50
   | Expect_tailcall -> 51
+  | Fragile_literal_pattern -> 52
 ;;
 
-let last_warning_number = 51
+let last_warning_number = 52
 (* Must be the max number returned by the [number] function. *)
 
 let letter = function
@@ -397,6 +399,10 @@ let message = function
       else "ambiguous documentation comment"
   | Expect_tailcall ->
       Printf.sprintf "expected tailcall"
+  | Fragile_literal_pattern ->
+      Printf.sprintf "the argument of this constructor should not be matched against a \
+                      constant pattern; the actual value of the argument could change \
+                      in the future"
 ;;
 
 let nerrors = ref 0;;
@@ -482,7 +488,8 @@ let descriptions =
    48, "Implicit elimination of optional arguments.";
    49, "Missing cmi file when looking up module alias.";
    50, "Unexpected documentation comment.";
-   51, "Warning on non-tail calls if @tailcall present";
+   51, "Warning on non-tail calls if @tailcall present.";
+   52, "Fragile constant pattern.";
   ]
 ;;
 
